; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_alloc.c_nilfs_palloc_get_desc_block.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_alloc.c_nilfs_palloc_get_desc_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.buffer_head = type { i32 }

@nilfs_palloc_desc_block_init = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, i64, i32, %struct.buffer_head**)* @nilfs_palloc_get_desc_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nilfs_palloc_get_desc_block(%struct.inode* %0, i64 %1, i32 %2, %struct.buffer_head** %3) #0 {
  %5 = alloca %struct.inode*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.buffer_head**, align 8
  store %struct.inode* %0, %struct.inode** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.buffer_head** %3, %struct.buffer_head*** %8, align 8
  %9 = load %struct.inode*, %struct.inode** %5, align 8
  %10 = load %struct.inode*, %struct.inode** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = call i32 @nilfs_palloc_desc_blkoff(%struct.inode* %10, i64 %11)
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @nilfs_palloc_desc_block_init, align 4
  %15 = load %struct.buffer_head**, %struct.buffer_head*** %8, align 8
  %16 = call i32 @nilfs_mdt_get_block(%struct.inode* %9, i32 %12, i32 %13, i32 %14, %struct.buffer_head** %15)
  ret i32 %16
}

declare dso_local i32 @nilfs_mdt_get_block(%struct.inode*, i32, i32, i32, %struct.buffer_head**) #1

declare dso_local i32 @nilfs_palloc_desc_blkoff(%struct.inode*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
